@@ -12,13 +12,13 @@ EBUILD Digest-SHA-5.48.ebuild 577 RMD160 9fc2436b081e6c93b85640c9cbfab4e3449094b
 EBUILD Digest-SHA-5.500.ebuild 546 RMD160 2231545fdbdca331773f5a818218477b7266523b SHA1 c738e361459c4f44cad302c23a0c022b0df34db9 SHA256 a4942012ab20dcf38bf5ec1521404fb4b4c76ccb0e709044a912225b44a446d2
 EBUILD Digest-SHA-5.600.0.ebuild 548 RMD160 874e6c35198b8f4e5ab94e66ffffb7eb335f3d6e SHA1 b933b8f400e2208b7c13d8837cee9890c62d1a87 SHA256 64f2afbde56d30508431f5f3455d5ff81a3784cdcbf21d5f651cce9d0027c005
 EBUILD Digest-SHA-5.610.0.ebuild 548 RMD160 c80460b4a2ad638030100f0315509876a9a5baeb SHA1 905c04ffa97a4e8f133c994189c30532a91b05d5 SHA256 f9980727d26a60dd44b511389fdf14e96add7ce7e6560fd24ad68d37dcc5c04d
-EBUILD Digest-SHA-5.620.0.ebuild 617 RMD160 aca7c7c989e8dee49c7d85a5b0863ae1351cb8bf SHA1 2dea144eead363e6cd3b2ac03765c6883859762d SHA256 9960b5670a9fd4ca79e4601f1cfdbc61bc7e47582f2871c6dffa76a9e92a604b
-MISC ChangeLog 7299 RMD160 4c57a0bc40dbc7f41dd92dd5296858d02c5738e1 SHA1 c84146f908ec7d0b6c26fdcaa6708a0a310687db SHA256 3e456f8039fd1fc8778994538974edc81025ef1055b5b1d091c23970d417e022
+EBUILD Digest-SHA-5.620.0.ebuild 630 RMD160 efe639e735ece75973ec925c122f16d403a75020 SHA1 4e1a3cdd4d61e3dcd133438d2da2eb09f8489cee SHA256 677601ac2f65e02b2a640289150323573140a265d746458a525ca63148ad343f
+MISC ChangeLog 7400 RMD160 09ea85bc1133a2394cffa87e1c51010ad48ebb41 SHA1 c22ef4191d24a996028e6a56eeb8cefec64f3997 SHA256 acf45b35ebfee2a8ec64e3754c6a871ade12786763cae25666695d2b9f2261ec
 MISC metadata.xml 236 RMD160 9b6856642c2ba74a2d7cc1305c3330e5a6c08043 SHA1 148aad1202fe3d916ceadfde563fdc832c724004 SHA256 ad6f9c4724e8c0b2b9a2c366816283c83cb7837154a3d98e257a2ae60edbe281
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (Darwin)
 
-iEYEARECAAYFAk5WkGkACgkQX3X2B8XHTolcgACeOUP2bgiyudygNne4u7Hcm3Hy
-mPkAoJRu6r42YxiK01AaL3GKE8Tjd9UW
-=grz9
+iEYEARECAAYFAk6AzZQACgkQX3X2B8XHTolO4QCeNDyUz9sI4QmnuDyqhlNp4g8T
+RR4AoJBg5WCvtcejwyl1EvQUMSmdiCiL
+=AFe5
 -----END PGP SIGNATURE-----
