@@ -6,13 +6,13 @@ EBUILD perl-Digest-SHA-5.48.ebuild 516 RMD160 12e2d80c2fd4f1b968e03916e785a111a7
 EBUILD perl-Digest-SHA-5.500.ebuild 513 RMD160 a3ef899deb31ea9bcc75055b27c189e803c8a104 SHA1 42a6b9e9a05a6d13eb2f1e1ddbf303bb54e457cb SHA256 c74eff104a62011609524a456772dcd1e0ac0ef4645ad5f783f272c6e7d0e835
 EBUILD perl-Digest-SHA-5.600.0.ebuild 515 RMD160 b62a5c28c5c120aa4bc2e44a13fbbff7bc31e359 SHA1 8d720e878dd232d152d1d4175385ea06eae47499 SHA256 03175384eac3f26842678bfb76d9bca8e130d4ad63da3d03f468c44dcfecbea9
 EBUILD perl-Digest-SHA-5.610.0-r2.ebuild 543 RMD160 555903d85cdd4007677dbc1afcde20d1aedce62f SHA1 237e9743cd13429530e0101b3d5cb1925b84f950 SHA256 3bee5a2d9bd7f6b99407227cec074b01e1e688fd4d0fa893eae4e2e12c3bfba0
-EBUILD perl-Digest-SHA-5.620.0.ebuild 612 RMD160 c4c1c6be54a47acd8fcc2060ea23f887d1ebaee3 SHA1 fa84ef6527ff72c8a5ba5551b99736138cb2768e SHA256 4a990f43d77b45f26f6ea0f741f87ca5eaf9a5fd94d7fac3162da207bfc6b87a
-MISC ChangeLog 4838 RMD160 4f3f119e1f862caa09dcbcec288da5748e1798db SHA1 565b338c41259855cbc5ff0d7d7f6dcc55850ea7 SHA256 a6b6ab85fdff0479d17ac5a5bb5e4ffd864fa2095322b817f58aa8e333db70bf
+EBUILD perl-Digest-SHA-5.620.0.ebuild 625 RMD160 5287e1707b0d4303310ec2f2dc0c31a67e5ada5f SHA1 8a8359383beefe97446e9c376f7e531abc9614bc SHA256 be47fe18ca14f5b99a0b0a5d9bf30ea436a12512ae18f286aaf4f7a57f2fa1e6
+MISC ChangeLog 4946 RMD160 c1913846ed5b3794388ce47ff524788b60d118bf SHA1 1103fefdb6d1b3986ecef98d938188d8e0d561a5 SHA256 38b189a850511f94b4571bc2b4b4dfcf390a3e367819c7db940bddf363d380ad
 MISC metadata.xml 159 RMD160 312f9ce05a5e6d5b2ae2dd53bf0371d80bb33a7f SHA1 ed741bf99f00660c2cfca56bcd1241336ad47fd7 SHA256 9e7c719a784bb48388c9a12217b85baa75f1b04e9bf049d74b740785fa5006dd
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (Darwin)
 
-iEYEARECAAYFAk5WkMAACgkQX3X2B8XHTolNngCgij+yGF4PjTYiJpwyThFWyr9a
-Zl0AnjZAbxqmgSm3/XgQTxBbBD4zFyF/
-=ihNw
+iEYEARECAAYFAk6AzeQACgkQX3X2B8XHTomkygCfc+HZgidQyLacGp0FSXtV8w5p
+LpkAoJP0A1qv/bAyvV4ze9rKNsipBSBE
+=rUxo
 -----END PGP SIGNATURE-----
