@@ -1,6 +1,10 @@
 # ChangeLog for virtual/perl-Digest-SHA
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Digest-SHA/ChangeLog,v 1.37 2011/08/25 18:13:15 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Digest-SHA/ChangeLog,v 1.38 2011/09/26 19:09:19 grobian Exp $
+
+  26 Sep 2011; Fabian Groffen <grobian@gentoo.org>
+  perl-Digest-SHA-5.620.0.ebuild:
+  Marked ~x86-freebsd
 
   25 Aug 2011; Fabian Groffen <grobian@gentoo.org>
   perl-Digest-SHA-5.620.0.ebuild:
